Add a function to calculate the modular exponentiation fast